--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.4",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^9.1.0",
     "framer-motion": "^12.5.0",
+    "framer-motion-3d": "^12.4.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
