--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-transition-group": "^4.4.5",
+    "swiper": "^11.2.6",
     "three": "^0.174.0"
   },
   "devDependencies": {
