--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "prebuild": "npm run copy-gifs",
-    "copy-gifs": "powershell -ExecutionPolicy Bypass -File scripts\\copy-gifs.ps1",
+    "copy-gifs": "node scripts/copy-gifs.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
